smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-missing-namespace.smithy
// Syntax error at line 6, column 15: Expected POUND('#') but found NEWLINE('\n') | Model
$version: "2.0"

namespace smithy.example

use smithy.api
